front/styles/globals.scss
//@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
//@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css);
@import "./configs.scss";

html, body {
  padding: 0;
  margin: 0;
  font-family: 'Spoqa Han Sans Neo', 'Spoqa Han Sans JP', sans-serif !important;
  background-color: #fff;
  overflow-x: hidden;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}



.black_cover {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
}

@font-face {
  font-family: 'Spoqa Han Sans Neo';
  font-style: normal;
  font-weight: 100;
  src: url(../styles/fonts/SpoqaHanSansNeo-Light.woff2) format('woff2'),
  url(../styles/fonts/SpoqaHanSansNeo-Light.woff) format('woff'),
  url(../styles/fonts/SpoqaHanSansNeo-Light.otf) format('truetype')
}

@font-face {
  font-family: 'Spoqa Han Sans Neo';
  font-style: normal;
  font-weight: normal;
  src: url(../styles/fonts/SpoqaHanSansNeo-Regular.woff2) format('woff2'),
  url(../styles/fonts/SpoqaHanSansNeo-Regular.woff) format('woff'),
  url(../styles/fonts/SpoqaHanSansNeo-Regular.otf) format('truetype')
}


@font-face {
  font-family: 'Spoqa Han Sans Neo';
  font-style: normal;
  font-weight: 500;
  src: url(../styles/fonts/SpoqaHanSansNeo-Medium.woff2) format('woff2'),
  url(../styles/fonts/SpoqaHanSansNeo-Medium.woff) format('woff'),
  url(../styles/fonts/SpoqaHanSansNeo-Medium.otf) format('truetype')
}

@font-face {
  font-family: 'Spoqa Han Sans Neo';
  font-style: normal;
  font-weight: bold;
  src: url(../styles/fonts/SpoqaHanSansNeo-Bold.woff2) format('woff2'),
  url(../styles/fonts/SpoqaHanSansNeo-Bold.woff) format('woff'),
  url(../styles/fonts/SpoqaHanSansNeo-Bold.otf) format('truetype')
}

